fixed draggable boxes can not be dragged on mobile devices

--- a/src/styles/floating_box.css
+++ b/src/styles/floating_box.css
@@ -1,4 +1,5 @@
 .floating-box {
+    touch-action: none;
     position: absolute;
     padding: 15px;
     border-radius: 15px;
